--- a/client/deliciously_front/src/App.css
+++ b/client/deliciously_front/src/App.css
@@ -146,4 +146,13 @@
   background: #ff234d;
 }
 
+.test {
+  display: flex;
+  overflow: hidden;
+  background: blue;
+    width: fit-content;
+}
 
+.moi {
+  background: rebeccapurple;
+}
